Migração para projeto de biblioteca

--- a/FormatadorDeArquivoDePagamento/FormatadorDeArquivoDePagamento.Console.csproj
+++ b/FormatadorDeArquivoDePagamento/FormatadorDeArquivoDePagamento.Console.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="ClosedXML" Version="0.102.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FormatadorDeArquivoDePagamento.Core\FormatadorDeArquivoDePagamento.Core.csproj" />
+  </ItemGroup>
+
 </Project>
